@@ -1,6 +1,10 @@
 #filter substitution
-fennec (@MOZ_APP_VERSION@)  unstable; urgency=low
+#ifdef MOZ_OFFICIAL_BRANDING
+fennec (@MOZ_APP_VERSION@)  stable; urgency=low
+#else
+fennec (@MOZ_APP_VERSION@~@MOZ_APP_BUILDID@)  unstable; urgency=low
+#endif
 
   * Mozilla Nightly (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
- -- Mozilla Mobile  <mobile@mozilla.com>  @MOZ_DEB_TIMESTAMP@
+ -- Mobile Feedback <mobile-feedback@mozilla.com>  @MOZ_DEB_TIMESTAMP@
